--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -333,6 +333,7 @@
     <string name="status_playing_label">Episode is being played</string>
     <string name="status_downloading_label">Episode is being downloaded</string>
     <string name="status_downloaded_label">Episode is downloaded</string>
+    <string name="status_not_downloaded_label">Episode has not been downloaded yet</string>
     <string name="status_unread_label">Item is new</string>
     <string name="in_queue_label">Episode is in the queue</string>
     <string name="new_episodes_count_label">Number of new episodes</string>
