--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,7 +6,7 @@
 
     <!-- Activitiy titles -->
     <string name="app_name">Einschlafen Podcast</string>
-    <string name="add_new_feed_label">Add podcast</string>
+    <string name="init_label">Initializing</string>
     <string name="downloads_label">Downloads</string>
     <string name="cancel_download_label">Cancel Download</string>
     <string name="about_label">About</string>
@@ -16,9 +16,6 @@
     <string name="copy_url_label">Copy URL</string>
     <string name="share_url_label">Share URL</string>
     <string name="copied_url_msg">Copied URL to clipboard.</string>
-
-    <!-- Playback history -->
-    <string name="clear_history_label">Clear history</string>
 
     <!-- Other -->
     <string name="confirm_label">Confirm</string>
@@ -45,8 +42,6 @@
     <string name="save_username_password_label">Save username and password</string>
     <string name="close_label">Close</string>
     <string name="retry_label">Retry</string>
-    <string name="auto_download_label">Include in auto downloads</string>
-
 
     <!-- Actions on feeds -->
     <string name="share_link_label">Share website link</string>
