--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -115,6 +115,7 @@
     <string name="show_cover_label">Bild anzeigen</string>
     <string name="rewind_label">Zurückspulen</string>
     <string name="fast_forward_label">Vorspulen</string>
+    <string name="sleep_label">Einschlafen</string>
     <string name="media_type_audio_label">Audio</string>
     <string name="media_type_video_label">Video</string>
     <string name="navigate_upwards_label">Nach oben navigieren</string>
