--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -115,6 +115,7 @@
     <string name="show_cover_label">Show picture</string>
     <string name="rewind_label">Rewind</string>
     <string name="fast_forward_label">Fast forward</string>
+    <string name="sleep_label">Sleep</string>
     <string name="media_type_audio_label">Audio</string>
     <string name="media_type_video_label">Video</string>
     <string name="navigate_upwards_label">Navigate upwards</string>
